# CES597

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_with_profiling.sh  directSolver.cpp  helloWorld.cpp  iterativeSolver.cpp  optimization-flags-compile.sh  pdfmake.sh  project-review.bib  project-review.tex  testMatrix.cpp
R/: trend-line_profile-time_gauss.R
data/: A_100.csv  A_200.csv  A_350.csv  b_100.csv  b_150.csv  b_200.csv  b_250.csv  b_300.csv  b_350.csv  b_50.csv  b_failed.csv  matrix.csv  vector.csv  x_200.csv  x_300.csv  x_400.csv
data/csv/: A_150.csv  A_25.csv  A_300.csv  A_400.csv  A_50.csv  A_failed.csv  b_1200.csv  b_400.csv  generate_test.R  x_100.csv  x_1200.csv  x_150.csv  x_350.csv
data/ncdf4/: .gitignore  10.nc  100.nc  200.nc  400.nc  generate_test.R
linearSolvers/: CMakeLists.txt  Functions.cpp  Functions.h  Matrix.cpp  Matrix.h  Solvers.cpp  Solvers.h  directSolver.cpp  iterativeSolver.cpp  optimization-flags-test-direct.sh  optimization-flags-test-gauss.sh  profiling-time-direct.sh  profiling-time-gauss.sh  testSolvers.cpp
linearSolvers/R/: boxplot_time_direct.R  boxplot_time_gauss.R  trend-line_profile-time_direct.R
linearSolvers/data/: A_10.csv  A_2.csv  A_250.csv  A_3.csv  A_4.csv  A_5.csv  A_500.csv  b_10.csv  b_1000.csv  b_1100.csv  b_1300.csv  b_25.csv  b_3.csv  b_4.csv  b_500.csv  b_750.csv  generate_test.R  matrix.csv  vector.csv  x_10.csv  x_1000.csv  x_1100.csv  x_1300.csv  x_2.csv  x_25.csv  x_250.csv  x_3.csv  x_5.csv  x_50.csv  x_500.csv  x_750.csv
linearSolvers/data/logs/: D_1000.txt  G_1000.txt  J_1000.txt
linearSolvers/output/lib/: libMatrix.dylib  liblinearSolvers.dylib
poster/: poster.indd
poster/figures/: parallelization.xml
scripts/: compile_with_profiling.sh  profiling-time-gauss.sh
scripts/final/: .RData  plot-amdahl.R  plot-fix-np.R  plot-profiles.R  plot-space.R  profile-parallel-v2-fix-np.sh  profile-parallel-v2-fix-size.sh  profile-parallel-v2.sh  read-profile.R
scripts/final/1/: log-fix-np-time.txt  log-fix-size-prog.txt
scripts/final/2/: log-fix-np-time.txt  log-fix-size-prog.txt  log-fix-size-time.txt
scripts/final/3/: log-fix-np-prog.txt  log-fix-np-time.txt  log-fix-size-prog.txt  log-fix-size-time.txt
scripts/final/profile1/: profile-parallel-v2-fix-np.sh  profile-parallel-v2-fix-size.sh
scripts/final/profile1/1/: log-fix-np-prog.txt  log-fix-np-time.txt  log-fix-size-prog.txt  log-fix-size-time.txt
scripts/final/profile1/2/: log-fix-np-prog.txt  log-fix-np-time.txt  log-fix-size-prog.txt  log-fix-size-time.txt
scripts/final/profile1/3/: log-fix-np-time.txt  log-fix-size-prog.txt  log-fix-size-time.txt
scripts/final/profile2/: profile-parallel-v2-fix-size-1600.sh
scripts/final/profile2/1/: log-fix-np-prog.txt  log-fix-np-time.txt  log-fix-size-prog.txt  log-fix-size-time.txt
scripts/final/profile2/2/: log-fix-np-prog.txt  log-fix-np-time.txt  log-fix-size-prog.txt  log-fix-size-time.txt
scripts/final/profile2/3/: log-fix-np-prog.txt  log-fix-np-time.txt  log-fix-size-prog.txt  log-fix-size-time.txt
scripts/final/profile3/: profile-parallel-v2-fix-np-3200.sh  profile-parallel-v2-fix-size-3200.sh
scripts/final/profile3/1/: log-fix-np-prog.txt  log-fix-np-time.txt  log-fix-size-prog.txt  log-fix-size-time.txt
scripts/final/profile3/2/: log-fix-np-prog.txt  log-fix-np-time.txt  log-fix-size-prog.txt  log-fix-size-time.txt
scripts/final/profile3/3/: log-fix-np-prog.txt  log-fix-np-time.txt  log-fix-size-prog.txt  log-fix-size-time.txt
scripts/report1/: optimization-flags-compile.sh  optimization-flags-test-direct.sh  optimization-flags-test-gauss.sh  profiling-time-direct.sh
scripts/report2/: log1.txt  log2.txt  log3.txt  log4.txt  log5.txt  plot-mpi-jacobi.R  profile-mpi-jacobi.sh  profile-openmp-jacobi-with-size.R  profile-openmp-jacobi-with-size.RData  profile-serial-jacobi-with-sizes.R  profile-serial-jacobi-with-sizes.RData  profile-serial-jacobi-with-sizes_old.RData  serial-improve.R  test  test.txt
src/: Matrix.cpp  Matrix.h  iterativeSolver.cpp  parallelJacobi.cpp  parallelJacobi_v2.cpp  testMatrix.cpp
